# almal

./: .pre-commit-config.yaml  CHANGELOG.md  PROJECT_PLAN.md  README.md  REFACTOR.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/src/: constants.py
backend/src/agents/: __init__.py  base.py  chat.py  constraint_parser.py  optimizer.py  orchestrator.py  research.py  review.py  types.py
backend/src/analysis/: __init__.py  optimization.py  performance.py
backend/src/api/: main.py
backend/src/config/: settings.py
backend/src/data/: __init__.py  csv_parser.py  market.py
backend/src/models/: __init__.py  chat.py  market.py  optimizer.py  portfolio.py
backend/tests/: conftest.py  test_agents.py  test_csv_parser.py  test_health.py  test_market_client.py  test_market_routes.py  test_models.py  test_optimization_constraints.py  test_performance.py  test_portfolio_routes.py  test_profiler.py
examples/: sample_portfolio.csv
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AllocationTable.tsx  AutocompleteInput.test.tsx  AutocompleteInput.tsx  BacktestChart.tsx  CorrelationHeatmap.tsx  EfficientFrontierChart.tsx  ErrorBoundary.tsx  InfoPopover.tsx  MetricCard.tsx  NarrativeBlock.tsx  PortfolioUploadFAB.tsx  RiskReturnScatter.tsx  Sidebar.tsx  TopNav.tsx
frontend/src/context/: AppContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useChartTheme.test.tsx  useChartTheme.ts
frontend/src/pages/: Investigator.tsx  (+4 more)
(+8 files in other folders)
